--- a/Assets/WebGLTemplates/AirConsole/controller.html
+++ b/Assets/WebGLTemplates/AirConsole/controller.html
@@ -79,9 +79,10 @@
         <div class="button" ontouchstart="window.app.sendMessageToScreen('right')" ontouchend="window.app.sendMessageToScreen('stop')">Right</div>
         <div class="button" ontouchstart="window.app.sendMessageToScreen('up')" ontouchend="window.app.sendMessageToScreen('stop')">Up</div>
         <div class="button" ontouchstart="window.app.sendMessageToScreen('down')" ontouchend="window.app.sendMessageToScreen('stop')">Down</div>
-        <div class="button" >...</div>
+        <div class="button">...</div>
         <div class="button" ontouchstart="window.app.sendMessageToScreen('shoot')">Shoot</div>
         <div class="button" ontouchstart="window.app.sendMessageToScreen('respawn')">Respawn</div>
+        <div class="button" ontouchstart="window.app.sendMessageToScreen('showprofile')">Show Profile Img</div>
 
     </div>
 </body>
