--- a/Assets/BurnCode/controller-template.html
+++ b/Assets/BurnCode/controller-template.html
@@ -226,7 +226,7 @@
             titles = titles + this.AddTitle(intFlags, 3, "Robin of Gnomley<br>");
             titles = titles + this.AddTitle(intFlags, 4, "Had A Bad Bow<br>");
             titles = titles + this.AddTitle(intFlags, 5, "Captain Flapjack<br>");
-            titles = titles + this.AddTitle(intFlags, 6, "Flambeau PitMaster<br>");
+            titles = titles + this.AddTitle(intFlags, 6, "PitMaster Flambeau<br>");
             titles = titles + this.AddTitle(intFlags, 7, "Phoenix, Risee<br>");
             titles = titles + this.AddTitle(intFlags, 8, "Totally Disposable<br>");
             titles = titles + this.AddTitle(intFlags, 9, "Came To Play<br>");
