--- a/Assets/BurnCode/controller-template.html
+++ b/Assets/BurnCode/controller-template.html
@@ -219,17 +219,17 @@
         };
 
         App.prototype.DisplayTitles = function (intFlags) {
-            var titles = ""; 
-            titles = titles + this.AddTitle(intFlags, 0, "The Champion<br>");
-            titles = titles + this.AddTitle(intFlags, 1, "Big Bad Bruiser<br>");
-            titles = titles + this.AddTitle(intFlags, 2, "The Sun Blocker<br>");
-            titles = titles + this.AddTitle(intFlags, 3, "Robin of Gnomley<br>");
-            titles = titles + this.AddTitle(intFlags, 4, "Had A Bad Bow<br>");
-            titles = titles + this.AddTitle(intFlags, 5, "Captain Flapjack<br>");
-            titles = titles + this.AddTitle(intFlags, 6, "PitMaster Flambeau<br>");
-            titles = titles + this.AddTitle(intFlags, 7, "Phoenix, Risee<br>");
-            titles = titles + this.AddTitle(intFlags, 8, "Totally Disposable<br>");
-            titles = titles + this.AddTitle(intFlags, 9, "Came To Play<br>");
+            var titles = "<br>Titles Earned:<br>"; 
+            titles = titles + this.AddTitle(intFlags, 0, "The Champion <i>(Got Killing Blow)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 1, "Big Bad Bruiser <i>(Most Damage Done)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 2, "The Sun Blocker <i>(Most Arrows Shot)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 3, "Robin of Gnomley <i>(Best Damage Per Arrow)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 4, "Had A Bad Bow <i>(Worst Damage Per Arrow)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 5, "Captain Flapjack <i>(Most Deaths by Stomp)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 6, "PitMaster Flambeau <i>(Most Deaths By Fire)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 7, "Phoenix, Risee <i>(Most Deaths)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 8, "Totally Disposable <i>(You are a Death Enthusist)</i><br>");
+            titles = titles + this.AddTitle(intFlags, 9, "Came To Play <i>Hurray, Lets play again!</i><br>");
             console.log("titles: " + titles);
             document.getElementById("Titles").innerHTML = titles;
             document.getElementById("TitlesMaster").innerHTML = titles;
